test/core/errors/array_types_error/zs/implicit_array_bool_error.zs
package implicit_array_bool_error;

struct ImplicitArrayBoolError
{
    implicit bool array[];
};
